# GPbase

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: Buffers.h  Descriptors.h  Device.h  GPbase.h  Globals.h  Instance.h  LoadShaders.h  SingleTimeCommands.h  Swapchain.h  ValidationLayers.h
shaders/: compileShaders.bat  triangles.vert
src/: Buffers.c  Descriptors.c  Device.c  Globals.c  Instance.c  LoadShaders.c  SingleTimeCommands.c  Swapchain.c  ValidationLayers.c  sdlMain.c
